# mnist_experiments

./: .gitignore  README.md  pyproject.toml
notebooks/: 00_check_tf.ipynb  00_check_tf_gpu.ipynb  00_launch_tensorboard.ipynb  01_autoencoders.ipynb  02.0_manifold_learning.ipynb  02.1_manifold_learning_TSEN_etc.ipynb  02_manifold_learning.ipynb  03_vae.ipynb  test.ipynb
notebooks/ae_vae_gan/: 01_autoencoders.ipynb  02_manifold_learning.ipynb  03_vae.ipynb  losses_functions.ipynb
notebooks/keras_basics/: 00_keras_basics.ipynb  01_keras_basics.ipynb
notebooks/models/: 01_autoencoders_c_autoencoder.h5  01_autoencoders_d_autoencoder_01.h5  01_autoencoders_denoiser_model.h5  01_autoencoders_encoder_01.h5  01_autoencoders_s_autoencoder.h5  02.0_manifold_learning_autoencoder_01.h5  02.0_manifold_learning_s_autoencoder_02.h5  03_conv_vae2_weights.h5  03_conv_vae_weights.h5  03_dense_vae_weights.h5  03_vae_01.h5  03_vae_conv2_decoder_model.h5  03_vae_conv2_encoder_model.h5  03_vae_conv_decoder_model.h5  03_vae_conv_encoder_model.h5  03_vae_dense_decoder_model.h5  03_vae_dense_encoder_model.h5  04_cvae_dense2_decoder_model.h5  04_cvae_dense2_encoder_model.h5  04_cvae_dense_decoder_model.h5  04_cvae_dense_encoder_model.h5  04_deep_ae_model.h5  04_deep_cond_ae_model.h5  04_dense2_cvae_weights.h5  04_dense_cvae_weights.h5
notebooks/tf_basics/: 00_check_tf.ipynb  00_check_tf_gpu.ipynb  00_launch_tensorboard.ipynb
src/data/: get_data.py
src/visualization/: plot_graph.py
