[tool.poetry]
name = "mnist_experiments"
version = "0.1.0"
description = "Learning experiments with DL and MNIST data"
authors = ["kolommik <mikhail.kolomasov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.10, <3.11"
tensorflow-gpu = "^2.9.1"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
scikit-learn = "^1.1"
tqdm = "^4.64.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.971"
pylint = "^2.14.5"
ipykernel = "^6.15.1"
tensorboard = "^2.9.1"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
